--- a/CoolPy_special_stock_portfolio.ipynb
+++ b/CoolPy_special_stock_portfolio.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "12       IDEA   100    10.03   11.05            Telecom"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1048,12 +1048,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*- Check Maximum profit:*"
+    "### *- Check Maximum profit:*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1102,12 +1102,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shift index by 1."
+    "### Shift index by 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1130,12 +1130,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a Total row."
+    "## Add a Total row."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
        "Total    707.84  "
       ]
      },
-     "execution_count": 354,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1644,19 +1644,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot table. "
+    "## Plot table."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- *Prepare*"
+    "- ### *Prepare*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1688,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
+       "      <th>Sr. No.</th>\n",
        "      <th>Equity</th>\n",
        "      <th>Size</th>\n",
        "      <th>Average Buy Price</th>\n",
@@ -1873,21 +1873,21 @@
        "</div>"
       ],
       "text/plain": [
-       "    index     Equity  Size  Average Buy Price     CMP  Total investment  \\\n",
-       "0       1   UNOMINDA     6             272.85  596.35           1637.10   \n",
-       "1       2   HDFCBANK     2            1493.15 1524.85           2986.30   \n",
-       "2       3  ICICIBANK     1             531.29  951.20            531.29   \n",
-       "3       4  KOTAKBANK     1            1655.10 1756.10           1655.10   \n",
-       "4       5       SBIN    13             368.62  591.65           4792.06   \n",
-       "5       6    YESBANK     5              73.20   17.05            366.00   \n",
-       "6       7        ITC    40             234.19  444.40           9367.60   \n",
-       "7       8     AXIGOL   100              37.06   49.30           3706.00   \n",
-       "8       9     GOLDEX    20              38.19   48.93            763.80   \n",
-       "9      10       SAIL     3              36.61   88.80            109.83   \n",
-       "10     11   SBINIFTY     4             151.12  205.22            604.48   \n",
-       "11     12  SUNPHARMA     1             404.08 1126.50            404.08   \n",
-       "12     13       IDEA   100              10.03   11.05           1003.00   \n",
-       "13  Total              296            5305.49 7411.40          27926.64   \n",
+       "   Sr. No.     Equity  Size  Average Buy Price     CMP  Total investment  \\\n",
+       "0        1   UNOMINDA     6             272.85  596.35           1637.10   \n",
+       "1        2   HDFCBANK     2            1493.15 1524.85           2986.30   \n",
+       "2        3  ICICIBANK     1             531.29  951.20            531.29   \n",
+       "3        4  KOTAKBANK     1            1655.10 1756.10           1655.10   \n",
+       "4        5       SBIN    13             368.62  591.65           4792.06   \n",
+       "5        6    YESBANK     5              73.20   17.05            366.00   \n",
+       "6        7        ITC    40             234.19  444.40           9367.60   \n",
+       "7        8     AXIGOL   100              37.06   49.30           3706.00   \n",
+       "8        9     GOLDEX    20              38.19   48.93            763.80   \n",
+       "9       10       SAIL     3              36.61   88.80            109.83   \n",
+       "10      11   SBINIFTY     4             151.12  205.22            604.48   \n",
+       "11      12  SUNPHARMA     1             404.08 1126.50            404.08   \n",
+       "12      13       IDEA   100              10.03   11.05           1003.00   \n",
+       "13   Total              296            5305.49 7411.40          27926.64   \n",
        "\n",
        "               Sector   Profit  % Profit  \n",
        "0                Auto  1941.00    118.56  \n",
@@ -1908,6 +1908,249 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sr. No.</th>\n",
+       "      <th>Equity</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Average Buy Price</th>\n",
+       "      <th>CMP</th>\n",
+       "      <th>Total investment</th>\n",
+       "      <th>Sector</th>\n",
+       "      <th>Profit</th>\n",
+       "      <th>% Profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>black</td>\n",
+       "      <td>green</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sr. No. Equity   Size Average Buy Price    CMP Total investment Sector  \\\n",
+       "0    black  black  black             black  black            black  black   \n",
+       "1    black  black  black             black  black            black  black   \n",
+       "2    black  black  black             black  black            black  black   \n",
+       "3    black  black  black             black  black            black  black   \n",
+       "4    black  black  black             black  black            black  black   \n",
+       "5    black  black  black             black  black            black  black   \n",
+       "6    black  black  black             black  black            black  black   \n",
+       "7    black  black  black             black  black            black  black   \n",
+       "8    black  black  black             black  black            black  black   \n",
+       "9    black  black  black             black  black            black  black   \n",
+       "10   black  black  black             black  black            black  black   \n",
+       "11   black  black  black             black  black            black  black   \n",
+       "12   black  black  black             black  black            black  black   \n",
+       "13   black  black  black             black  black            black  black   \n",
+       "\n",
+       "   Profit % Profit  \n",
+       "0   black    green  \n",
+       "1   black    green  \n",
+       "2   black    green  \n",
+       "3   black    green  \n",
+       "4   black    green  \n",
+       "5   black      red  \n",
+       "6   black    green  \n",
+       "7   black    green  \n",
+       "8   black    green  \n",
+       "9   black    green  \n",
+       "10  black    green  \n",
+       "11  black    green  \n",
+       "12  black    green  \n",
+       "13  black    green  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1941,6 +2184,8 @@
     "# Apply Colors to Profit Column\n",
     "font_colours_df['% Profit'] = np.where(\n",
     "    plot_df['% Profit'] < 0, 'red', 'green')\n",
+    "\n",
+    "font_colours_df\n",
     "\n"
    ]
   },
@@ -1948,12 +2193,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- *Plot using df2img*"
+    "- ### *Plot using df2img*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +2214,7 @@
        "'\\ndf2img(\\n    df1,\\n    title=\"ICICIDirect Portfolio\",\\n    file=\"table_icicidirect.png\",\\n    header_color=\"white\",\\n    header_bgcolor=\"orange\",\\n    row_bgcolors=[\"lightgray\", \"white\"],\\n    font_size=10.0,\\n    col_width=1.5,\\n    row_height=0.3\\n)\\nplt.show()\\n\\n#URL: https://stackoverflow.com/questions/49783178/python-keep-other-columns-when-using-sum-with-groupby\\n'"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
